bld/wipfc/test/neg/neg8.ipf
:userdoc.
:title.Negative 8
:docprof.
:h1 hide.No visible table of contents entries
:p.The file&per.
:euserdoc.
